<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lista_mascotas"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListaMascotas">


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"

        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/relative1"
        android:layout_width="match_parent"
        android:layout_height="489dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.727">

        <ImageView
            android:id="@+id/mascota1"
            android:layout_width="120dp"
            android:layout_height="170dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/textmascota1"
            android:src="@drawable/perro1" />

        <TextView
            android:id="@+id/txtmascota1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mascota1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-12dp"
            android:text="@string/textmascota1"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />


        <ImageView
            android:id="@+id/mascota2"
            android:layout_width="120dp"
            android:layout_height="170dp"
            android:layout_below="@id/txtmascota1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-12dp"
            android:contentDescription="@string/textmascota2"
            android:src="@drawable/perro2" />


        <TextView
            android:id="@+id/txtmascota2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mascota2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-12dp"
            android:text="@string/textmascota2"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/mascota3"
            android:layout_width="120dp"
            android:layout_height="170dp"
            android:layout_below="@id/txtmascota2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-12dp"
            android:contentDescription="@string/textmascota3"
            android:src="@drawable/perro3" />


        <TextView
            android:id="@+id/txtmascota3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mascota3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-12dp"
            android:text="@string/textmascota3"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />


        <ImageView
            android:id="@+id/mascota4"
            android:layout_width="120dp"
            android:layout_height="170dp"
            android:layout_below="@id/txtmascota3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-12dp"
            android:contentDescription="@string/textmascota4"
            android:src="@drawable/perro4" />


        <TextView
            android:id="@+id/txtmascota4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mascota3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-12dp"
            android:text="@string/textmascota4"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />











    </RelativeLayout>

    <Button
        android:id="@+id/bt_go_back"

        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="500dp"
        android:layout_marginTop="3000dp"
        android:text="@string/button_lista_mascotas"
        app:layout_constraintBottom_toTopOf="@+id/recycler_view"
        app:layout_constraintEnd_toStartOf="@+id/recycler_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>