<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity"

    >



    <ActionMenuView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </ActionMenuView>

    <include
        android:id="@+id/action_bar"
        layout="@layout/actionbar"
        >
    </include>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:scrollbars="vertical"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/relative1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/mascota1"
            android:layout_width="120dp"
            android:layout_height="170dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/mascota1"
            android:src="@drawable/perro1" />

        <TextView
            android:id="@+id/txtmascota1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mascota1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-12dp"
            android:text="@string/textmascota1"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />


        <ImageView
            android:id="@+id/huesoamarillo"
            android:layout_width="65dp"
            android:layout_height="32dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="33dp"
            android:layout_marginTop="180dp"
            android:background="@android:drawable/screen_background_light"
            android:contentDescription="@string/contentdescription_huesoamarillo"
            android:scaleType="centerInside"
            android:src="@drawable/hamarillo" />

        <ImageView
            android:id="@+id/huesoblanco"
            android:layout_width="55dp"
            android:layout_height="31dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="280dp"
            android:layout_marginTop="180dp"
            android:contentDescription="@string/contentdescription_huesoblanco"
            android:scaleType="centerInside"
            android:src="@drawable/hueso" />

        <ImageView
            android:id="@+id/mascota2"
            android:layout_width="120dp"
            android:layout_height="170dp"
            android:layout_below="@+id/txtmascota1"
            android:layout_centerHorizontal="true"
            app:srcCompat="@drawable/perro2" />


        <TextView
            android:id="@+id/txtmascota2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mascota2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-12dp"
            android:text="@string/textmascota2"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/huesoamarillo2"
            android:layout_width="65dp"
            android:layout_height="32dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="33dp"
            android:layout_marginTop="360dp"
            android:background="@android:drawable/screen_background_light"
            android:contentDescription="@string/contentdescription_huesoamarillo"
            android:scaleType="centerInside"
            android:src="@drawable/hamarillo" />

        <ImageView
            android:id="@+id/huesoblanco2"
            android:layout_width="55dp"
            android:layout_height="31dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="280dp"
            android:layout_marginTop="360dp"
            android:contentDescription="@string/contentdescription_huesoblanco"
            android:scaleType="centerInside"
            android:src="@drawable/hueso" />



    </RelativeLayout>

</android.support.constraint.ConstraintLayout>